# llm-proxy

./: .gitignore  .monitor-plan.md  AGENTS.md  Cargo.toml  README.md  test-curl.sh
.github/workflows/: ci.yml
crates/llm-proxy/: Cargo.toml
crates/llm-proxy-core/: Cargo.toml
crates/llm-proxy-core/src/: auth.rs  config.rs  crypto.rs  lib.rs  routing.rs  tokens.rs
crates/llm-proxy-dashboard/: Cargo.toml  build.rs
crates/llm-proxy-dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/llm-proxy-dashboard/frontend/src/: App.tsx  Layout.tsx  PayloadViewer.tsx  api.ts  main.tsx  styles.css  useAuthStatus.ts
crates/llm-proxy-dashboard/frontend/src/pages/: Dashboard.tsx  Keys.tsx  Login.tsx  Performance.tsx  RequestDetail.tsx  Requests.tsx  Secrets.tsx  Setup.tsx
crates/llm-proxy-dashboard/src/: auth.rs  dashboard_charts.rs  dashboard_page.rs  lib.rs  pages.rs  payloads.rs  render.rs  request_routes.rs  routes.rs  state.rs
crates/llm-proxy-db/: Cargo.toml
crates/llm-proxy-db/src/: admin.rs  lib.rs  metrics.rs  metrics_tests.rs  migrations.rs  request_rows.rs  request_tests.rs  requests.rs  secrets.rs
crates/llm-proxy-monitor/: Cargo.toml
crates/llm-proxy-monitor/src/: collector.rs  db.rs  lib.rs  types.rs
crates/llm-proxy-proxy/: Cargo.toml
crates/llm-proxy-proxy/src/: anthropic_tests.rs  auth.rs  chat.rs  handlers.rs  lib.rs  logging.rs  messages_endpoint.rs  models.rs  payload.rs  responses.rs  responses_endpoint.rs  streaming.rs  tests.rs  upstream.rs  usage.rs
crates/llm-proxy/src/: main.rs
docs/: architecture.md
