[package]
name = "llm-proxy-dashboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
llm-proxy-core = { path = "../llm-proxy-core" }
llm-proxy-db = { path = "../llm-proxy-db" }
tokio.workspace = true
tracing.workspace = true
