[package]
name = "llm-proxy-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
llm-proxy-core = { path = "../llm-proxy-core" }
llm-proxy-db = { path = "../llm-proxy-db" }
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

[dev-dependencies]
llm-proxy-core = { path = "../llm-proxy-core" }
tempfile.workspace = true
tower.workspace = true
