[package]
name = "llm-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
llm-proxy-core = { path = "../llm-proxy-core" }
llm-proxy-dashboard = { path = "../llm-proxy-dashboard" }
llm-proxy-db = { path = "../llm-proxy-db" }
llm-proxy-proxy = { path = "../llm-proxy-proxy" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
